--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                               <span class="author-block">
                                   <a href="https://github.com/Ralph-Zhou" target="_blank">Yuhang Zhou</a><sup>§</sup>,</span>   <!-- 替换 & -->
                               <span class="author-block">
-                                  <a href="https://chewanxiang.com/" target="_blank">Wangxiang Che</a><sup>+</sup></span>
+                                  <a href="https://chewanxiang.com/" target="_blank">Wanxiang Che</a><sup>+</sup></span>
                           </div>
                           
                           <div class="is-size-5 publication-authors">
